[DOC] Manuel : Le mode projet

--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -97,6 +97,10 @@ XINX permet d'éditer les types de fichiers suivants:
 
 Vous allez donc pouvoir développer dans un seul éditeur l'ensemble de vos feuilles de styles XSL ainsi que tous les autres fichiers associés à vos feuilles de styles\footnote{Si le besoin se fait sentir, vous pouvez développer un plugin pour gérer les autres types de fichiers associés à vos projets}.
 
+\subsection{Le mode projet}
+
+XINX possède un mode projet permettant de rassembler dans une seule vue l'enssemble des fichiers géré par XINX de votre projet. Cette vue vous permet alors de rechercher un fichier donnée de votre projet (pratique si votre projet possède beaucoup de fichier). Vous pouvez également ouvrir plusieurs projet en même temps. XINX fonctionne également sans utiliser sans le mode projet mais le mode projet permet d'accéder à des fonctionnalités supplémentaire et permet d'améliorer les propositons lors de la complétion.
+
 
 
 \chapter{Installation de XINX}
