[DOC] Manuel : Les modèles

--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -101,7 +101,11 @@ Vous allez donc pouvoir développer dans un seul éditeur l'ensemble de vos feui
 
 XINX possède un mode projet permettant de rassembler dans une seule vue l'enssemble des fichiers géré par XINX de votre projet. Cette vue vous permet alors de rechercher un fichier donnée de votre projet (pratique si votre projet possède beaucoup de fichier). Vous pouvez également ouvrir plusieurs projet en même temps. XINX fonctionne également sans utiliser sans le mode projet mais le mode projet permet d'accéder à des fonctionnalités supplémentaire et permet d'améliorer les propositons lors de la complétion.
 
+\subsection{Les modèles}
 
+Les modèles permettent d'améliorer la completion en faisant des propositions propre à votre utilisation, et propre à votre type de code. Les modèles sont des bouts de code qui sont ajouter automatiquement au votre quand vous écrivez un mot clé que vous avez choisit. Ce mot vous est proposé par la complétion de XINX.
+
+Ces modèles sont utilisable par n'importe quel type de fichier.
 
 \chapter{Installation de XINX}
 
