[DOC] Manuel : Les fichiers de données

--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -107,6 +107,10 @@ Les modèles permettent d'améliorer la completion en faisant des propositions p
 
 Ces modèles sont utilisable par n'importe quel type de fichier.
 
+\subsection{Les fichiers de données}
+
+Une vue spéciale permet de visualiser les fichiers de données au format XML sous forme arborescente. Cette vue couplet avec une feuille de style ouverte permet également de tester votre feuille de style et d'en voir le résultat.
+
 \chapter{Installation de XINX}
 
 XINX possède différents paquets pour installer suivant l'environnement. Si vous avez déjà installé un logiciel auparavent sur votre système d'exploitation, l'installation vous sera facile. Comme l'installation du logiciel peut varier suivant la platforme, les instructions seront séparés dans plusieurs chapitre.
