--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -85,7 +85,7 @@ Une feuille de style XSLT peut être utilisé pour filtrer un fichier XML, trans
 XINX est un logiciel fort complet qui permet d'éditer principalement les feuilles de style mais permet également d'éditer d'autres type de fichiers.
 
 XINX permet d'éditer les types de fichiers suivants:
-\begin{itemsize}
+\begin{itemize}
   \item \verb+XSL Stylesheet+ : Le type de fichier que XINX sait le mieux éditer. Il propose une coloration syntaxique sur ce type de fichier, de l'autocompletion sur les balises, les attributs et sur les variables du fichier et sur les variables des fichiers d'import.
   \item \verb+XML File+ : La completion sur les fichiers XML n'existe pas, les balises des fichiers XML ne pouvant pas être déterminé à l'avance (sauf à part par un schema ou une DTD, mais XINX n'est pas encore capable de les utiliser). 
   \item \verb+HTML File+ : XINX est capable de compléter sur les fichiers HTML. Il propose les différentes balises HTML disponibles et les attributs associés. Pour certain attribut (comme l'attribut \verb+type+ de la balise \verb+input+), XINX propose aussi des valeurs.
@@ -93,7 +93,7 @@ XINX permet d'éditer les types de fichiers suivants:
   \item \verb+Cascading Style Sheet+ : Seul la coloration syntaxique existe sur ce type de fichier. XINX est capable de vous présenter le contennu dans une boite à outil.
   \item \verb+XQuery+ : XINX est capable de proposer de la coloration syntaxique, ainsi que la completion sur quelques fonctions (count, \dots)
   \item \verb+Text file+ : Sur les fichiers textes, il n'y a pas de coloration syntaxique, ni de completion.
-\end{itemsize}
+\end{itemize}
 
 Vous allez donc pouvoir développer dans un seul éditeur l'ensemble de vos feuilles de styles XSL ainsi que tous les autres fichiers associés à vos feuilles de styles\footnote{Si le besoin se fait sentir, vous pouvez développer un plugin pour gérer les autres types de fichiers associés à vos projets}.
 
@@ -246,7 +246,7 @@ Nous allons faire un tour de l'interface pour retrouver les différentes parties
 
 \subsection{Les menus}
 
-\begin{itemsize}
+\begin{itemize}
   \item Session 
   \item Projets
   \item Fichier
@@ -257,11 +257,11 @@ Nous allons faire un tour de l'interface pour retrouver les différentes parties
   \item Outils
   \item Fenêtre
   \item Aide
-\end{itemsize}
+\end{itemize}
 
 \subsection{Les onglets}
 
-\begin{itemsize}
+\begin{itemize}
   \item Dossier projet
   \item Contenue du document
   \item Modèles
@@ -270,7 +270,7 @@ Nous allons faire un tour de l'interface pour retrouver les différentes parties
   \item Gestionnaire de version
   \item Résultat de recherche
   \item Progression
-\end{itemsize}
+\end{itemize}
 
 \section{Configuration de XINX}
 
