[DOC] Manuel : Présentation de l'interface

--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -236,7 +236,7 @@ Sur l'écran suivant vous allez trouver différentes options lié à l'édition 
 
 Enfin XINX vous demandera de définir l'emplacement d'une liste d'outil qu'il pourrait potentiellement avoir besoin. Si les outils ne sont pas installé, ou tout simplement, si vous ne souhaiter pas les renseigner tout de suite, vous pouvez continuer. XINX vous re-demandera automatiquement l'outil lorsqu'il en aura besoin.
 
-Si vous utilisez un gestionnaire de version comme CVS et SubVersion, XINX vous demandera l'emplacement des commande à lancer.
+Si vous utilisez un gestionnaire de version comme CVS et SubVersion, XINX vous demandera l'emplacement des commande à lancer. Pour SubVersion il existe également un plugin directement connecté à la librairie Subversion et ne demandant ainsi aucun plugin supplémentaire.
 
 \section{L'interface principale}
 
@@ -244,7 +244,17 @@ L'interface principale de XINX est celle qui permet l'édition des fichiers. Ell
 
 Nous allons faire un tour de l'interface pour retrouver les différentes parties.
 
+////////////////////// Ici une image de l'interface numéroté ////////////////////
+
+
+En haut vous aller retrouver la barre de menu avec les différentes commandes que vous allez pouvoir executer, ainsi que la barre d'icône avec les commandes les plus souvent lancé. Vous allez puvoir retrouver une description des différents menu dans la section \ref{sub:Menu}. Sur les cotés gauche et droit vous allez retrouvers différents boites à outils qui vous donnerons différentes sorte d'information utils au développement et à l'écriture de vos feuilles de style. Vous allez pouvoir retrouver la description des ces onglets/vues dans la section \ref{sec:dock}. Vous trouverez dans la partie basse de XINX, d'autres boites à outils regroupant les erreurs, les journaux, et la progression des différentes tâches.
+
+Au centre vous avez les différents fichiers que vous avez ouvert et que vous souhaiter donc éditer. Les différents fichiers sont présenté sous forme d'onglet. Vous pouvez trier les onglets (le trie des onglets sera sauvegardé dans la session). XINX ouvre chaque fichier après chaque onglet courant. Vous permettant ainsi de facilement accéder à l'onglet précédent, et l'onglet nouvellement ouvert.
+
+Nous allons maintenant voir le contenu des différents menu.
+
 \subsection{Les menus}
+\label{sub:menu}
 
 \begin{itemize}
   \item Session 
@@ -259,7 +269,28 @@ Nous allons faire un tour de l'interface pour retrouver les différentes parties
   \item Aide
 \end{itemize}
 
-\subsection{Les onglets}
+
+\section{Les projets}
+\label{sec:Projets}
+
+\subsection{Création d'un projet}
+
+\subsection{Utilisation des projets}
+\label{sec:RCS}
+Gestionnaire de version
+
+\section{Les sessions}
+
+\section{Mode édition}
+
+\subsection{Edition}
+
+\subsection{Test}
+
+Flux de donnée / présentation
+
+\section{Les onglets}
+\label{sec:dock}
 
 \begin{itemize}
   \item Dossier projet
@@ -273,25 +304,6 @@ Nous allons faire un tour de l'interface pour retrouver les différentes parties
 \end{itemize}
 
 \section{Configuration de XINX}
-
-\section{Les projets}
-\label{sec:Projets}
-
-\subsection{Création d'un projet}
-
-\subsection{Utilisation des projets}
-\label{sec:RCS}
-Gestionnaire de version
-
-\section{Mode édition}
-
-\subsection{Edition}
-
-\subsection{Test}
-
-Flux de donnée / présentation
-
-\section{Les onglets}
 
 \chapter{Les modèles}
 
