[DOC] Manual : Amélioration de la doc du menu

--- a/doc/manual/manual-user.tex
+++ b/doc/manual/manual-user.tex
@@ -253,11 +253,25 @@ Au centre vous avez les différents fichiers que vous avez ouvert et que vous so
 
 Nous allons maintenant voir le contenu des différents menu.
 
-
 \subsection{Les menus}
 \label{sub:menu}
 
-\paragraph{Session} : Dans le menu session, XINX vous propose de gérer vos sessions. Vous allez pouvoir retrouver plus d'information sur les sessions dans la section \ref{sec:Sessions}
+\paragraph{Session} : Dans le menu session, XINX vous propose de gérer vos sessions. Vous allez pouvoir retrouver plus d'information sur les sessions dans la section \ref{sec:Sessions}. Les sessions permettent de sauvegarder l'état de XINX et de pouvoir y retourner plus tard.
+
+\paragraph{Projets} : XINX permet la gestion de projet. Ces projets représent un ensemble cohérent de document. Malgrés que XINX permet d'ouvrir des docuements sans les associés à un projet, il est conseillé de créer un nouveau projet. Le mode projet permet de faire fonctionner les imports beaucoup mieux pour la complétion, permet de gérer un gestionnaire de version, \dots. Pour plus d'information vous pouvez aller voir \ref{sec:Projets}. 
+
+Dans le menu projet vous allez pouvoir aussi indiquer que vous souheter mettre à jour ou commiter les fichiers. Seul le projet par défaut sera commité. Si necessaire vous pouvez changer le projet par défaut dans la vue << Dossier projet >>.
+
+\paragraph{Fichier} : Dans le menu fichier vous allez retrouver les opérations courantes de toute éditeur de texte : \emph{Nouveau}, \emph{Ouvrir}, \emph{Enregistrer}, \emph{Imprimer} et \emph{Fermer}. En cas d'ouverture ou de création d'un fichier, le programme associera automatiquement le fichier à un projet s'il le peut (si le fichier se trouve en dessous du projet), sinon il seront orphelin (donc sans projet).
+
+\paragraph{Edition} : Dans le menu édition, vous allez retouver les options par défaut d'un éditeur de texte (défaire, refaire, couper, copier, coller, tout selectionner), ainsi que des options propre à un éditeur de code (duplication des lignes, déplacement vers le haut ou ver les bas de code, mise en MAJUSCULE et en minuscule, gestion de l'indention, \dots). Les différentes options du menu édition s'adapte en fonction de l'éditeur selectionné.
+
+\paragraph{Recherche} : Dans le menu recherche vous allez pouvoir trouver les options Rechercher et Remplacer qui vous permettrons de rechercher et remplacer dans le document courant les différents éléments. Vous allez pouvoir également à l'aide de ce menu pouvoir rechercher dans un dossier donnée ou dans les différents dossier d'un projet.
+
+/// Afficher une capture de la page de recherche /////
+
+
+
 
 \begin{itemize}
   \item Session 
